# GenerateImagesSocialNetwork

./: .gitignore  Dockerfile  celery_main.py  dependencies.py  docker-compose.yaml  init_db.py  logging_config.py  main.py  pyproject.toml  settings.py  startup.py
auth/: auth.py  database.py  manager.py  models.py  router.py  schemas.py  user_db_interface.py  utils.py
categories/: category_db_interface.py  models.py  schemas.py
celery_tasks/: __init__.py  cleanup_temp_media.py  delete_comment_image.py  delete_media.py  delete_post_image.py  process_avatar.py  process_gallery.py  upload_comment_image.py  upload_post_image.py
comments/: comments_db_interface.py  models.py  router.py  schemas.py
communities/: community_db_interface.py  models.py  router.py  schemas.py
like_dislike/: models.py  reaction_db_interface.py  router.py  schemas.py
migrations/: env.py
migrations/versions/: 001ebdb883d8_database_creation.py  08a1f1cb1c5c_added_unique_fields_in_user_model.py  0f297436eeb6_create_community_author.py  1a40bd941f83_create_community.py  2024_09_07_aaa59a562ac6_added_posts.py  27ce2466a07c_create_dislike.py  2e3987edb912_create_likes.py  3324dbd7cbea_added_age_column.py  34947dfa4ddd_added_post_author.py  4094fca6b5b0_added_user_gallery.py  43bbef33b3f8_23_12_2024_added_relationship_in_comment.py  538e42a17838_added_unique_fields_in_user_model.py  53be368939a2_create_categories.py  629e8db6eb2d_changed_post.py  (+24 more)
posts/: models.py  post_db_interface.py  router.py  schemas.py
tests/: conftest.py
users/: manager.py  models.py  schema.py  schemas.py
(+5 files in other folders)
