[tool.poetry]
name = "teamsocialnetwork"
version = "0.1.0"
description = ""
authors = ["Ireal <pesotskygoscha@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
#psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
celery = "^5.5.1"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
